[#798] Cyclic dependencies: Add concept of model coordinates to reflect the semantics